--- a/editor/package.json
+++ b/editor/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "editor",
+  "name": "es2016",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.4.0"
+  },
+  "devDependencies": {
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
