--- a/ecommerce/package.json
+++ b/ecommerce/package.json
@@ -6,8 +6,10 @@
     "hoek": "^5.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "save": "^2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
